displey user in worker workingTime

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -93,7 +93,7 @@
     "Status":"Status",
     "Select service from dictionary":"Wybierz usługi ze słownika",
     "Total":"Suma",
-    "Quantity":"Ilośc",
+    "Quantity":"Ilość",
     "Summary":"Podsumowanie",
     "No work time":"Brak czasu pracy",
     "Date":"Data",
