--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -145,7 +145,9 @@
       "Report realization of issues for the customers [only completed]":"Report realization of issues for the customers [only completed]",
       "Amount of tasks":"Amount of tasks",
       "Language":"Language",
-      "Search by User":"Search by User"
+      "Search by User":"Search by User",
+      "History":"History",
+      "Venues details":"Venues details"
       
 
 
