--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -145,7 +145,9 @@
       "Report realization of issues for the customers [only completed]":"Raportowanie realizacji zadań dla klientów [tylko zakończone]",
       "Amount of tasks":"Ilość zadań",
       "Language":"Język",
-      "Search by User":"Wyszukaj pracownika"
+      "Search by User":"Wyszukaj pracownika",
+      "History":"Historia",
+      "Venues details":"Szczegóły miejsca"
     
  
 
