--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -147,7 +147,9 @@
       "Language":"Język",
       "Search by User":"Wyszukaj pracownika",
       "History":"Historia",
-      "Venues details":"Szczegóły miejsca"
+      "Venues details":"Szczegóły miejsca",
+      "End Date":"Data do",
+      "Start Date":"Data od"
     
  
 
