fixed name deadline

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -83,7 +83,7 @@
     "Select Asigned user":"Select Asigned user",
     "Creation date":"Creation date",
     "Start of implementation":"Start of implementation",
-    "Deadline":"Deadlinen",
+    "Deadline":"Deadline",
     "Settled":"Settled",
     "Task":"Task",
     "Address":"Address",
