--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -149,7 +149,8 @@
       "History":"Historia",
       "Venues details":"Szczegóły miejsca",
       "End Date":"Data do",
-      "Start Date":"Data od"
+      "Start Date":"Data od",
+      "Active":"Aktywny"
     
  
 
