--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -150,7 +150,10 @@
       "Venues details":"Szczegóły miejsca",
       "End Date":"Data do",
       "Start Date":"Data od",
-      "Active":"Aktywny"
+      "Active":"Aktywny",
+      "Archived":"Zarchiwizowane",
+      "Yes":"Tak",
+      "No":"Nie"
     
  
 
