added new status cancelled

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -153,7 +153,8 @@
       "Active":"Active",
       "Archived":"Archived",
       "Yes":"Yes",
-      "No":"No"
+      "No":"No",
+      "Cancelled":"Cancelled"
       
 
 
