--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -153,7 +153,8 @@
       "Active":"Aktywny",
       "Archived":"Zarchiwizowane",
       "Yes":"Tak",
-      "No":"Nie"
+      "No":"Nie",
+      "Cancelled":"Anulowane"
     
  
 
