added new button map

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -154,7 +154,8 @@
       "Archived":"Archived",
       "Yes":"Yes",
       "No":"No",
-      "Cancelled":"Cancelled"
+      "Cancelled":"Cancelled",
+      "Map":"Map"
       
 
 
