--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -154,7 +154,8 @@
       "Archived":"Zarchiwizowane",
       "Yes":"Tak",
       "No":"Nie",
-      "Cancelled":"Anulowane"
+      "Cancelled":"Anulowane",
+      "Map":"Mapa"
     
  
 
