added old tasks in contractor

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -155,7 +155,8 @@
       "Yes":"Yes",
       "No":"No",
       "Cancelled":"Cancelled",
-      "Map":"Map"
+      "Map":"Map",
+      "Tasks history":"Tasks history"
       
 
 
