--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -155,7 +155,8 @@
       "Yes":"Tak",
       "No":"Nie",
       "Cancelled":"Anulowane",
-      "Map":"Mapa"
+      "Map":"Mapa",
+      "Tasks history":"Historia zadań"
     
  
 
