added venue history in contractor view

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -156,7 +156,8 @@
       "No":"No",
       "Cancelled":"Cancelled",
       "Map":"Map",
-      "Tasks history":"Tasks history"
+      "Tasks history":"Tasks history",
+      "Details":"Details"
       
 
 
