--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -156,7 +156,8 @@
       "No":"Nie",
       "Cancelled":"Anulowane",
       "Map":"Mapa",
-      "Tasks history":"Historia zadań"
+      "Tasks history":"Historia zadań",
+      "Details":"Szczegóły"
     
  
 
