add dialog copy

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -160,7 +160,8 @@
       "Details":"Szczegóły",
       "Cancel":"Anuluj",
       "Change Status":"Zmiana statusu",
-      "Changing the status of the task to complete will not allow you to edit it later.":"Zmiana statusu zadania na Zakończone nie pozwoli na jego późniejszą edycję."
+      "Changing the status of the task to complete will not allow you to edit it later.":"Zmiana statusu zadania na Zakończone nie pozwoli na jego późniejszą edycję.",
+      "Do you want to copy this venue?":"Czy chcesz skopiować to miejsce?"
     
  
 
