--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -161,7 +161,8 @@
       "Cancel":"Cancel",
       "Change Status":"Change Status",
       "Changing the status of the task to complete will not allow you to edit it later.":"Changing the status of the task to complete will not allow you to edit it later.",
-      "Do you want to copy this venue?":"Do you want to copy this venue?"
+      "Do you want to copy this venue?":"Do you want to copy this venue?",
+      "Do you want to copy this task?":"Do you want to copy this task?"
       
 
 
