--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -161,7 +161,8 @@
       "Cancel":"Anuluj",
       "Change Status":"Zmiana statusu",
       "Changing the status of the task to complete will not allow you to edit it later.":"Zmiana statusu zadania na Zakończone nie pozwoli na jego późniejszą edycję.",
-      "Do you want to copy this venue?":"Czy chcesz skopiować to miejsce?"
+      "Do you want to copy this venue?":"Czy chcesz skopiować to miejsce?",
+      "Do you want to copy this task?":"Czy chcesz skopiować to zadanie?"
     
  
 
