--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -162,7 +162,8 @@
       "Change Status":"Change Status",
       "Changing the status of the task to complete will not allow you to edit it later.":"Changing the status of the task to complete will not allow you to edit it later.",
       "Do you want to copy this venue?":"Do you want to copy this venue?",
-      "Do you want to copy this task?":"Do you want to copy this task?"
+      "Do you want to copy this task?":"Do you want to copy this task?",
+      "Select Language":"Select Language"
       
 
 
