--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -162,7 +162,8 @@
       "Change Status":"Zmiana statusu",
       "Changing the status of the task to complete will not allow you to edit it later.":"Zmiana statusu zadania na Zakończone nie pozwoli na jego późniejszą edycję.",
       "Do you want to copy this venue?":"Czy chcesz skopiować to miejsce?",
-      "Do you want to copy this task?":"Czy chcesz skopiować to zadanie?"
+      "Do you want to copy this task?":"Czy chcesz skopiować to zadanie?",
+      "Select Language":"Zmiana języka"
     
  
 
