--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -163,7 +163,10 @@
       "Changing the status of the task to complete will not allow you to edit it later.":"Changing the status of the task to complete will not allow you to edit it later.",
       "Do you want to copy this venue?":"Do you want to copy this venue?",
       "Do you want to copy this task?":"Do you want to copy this task?",
-      "Select Language":"Select Language"
+      "Select Language":"Select Language",
+      "All services":"All services",
+      "Venue ID":"Venue ID",
+      "All Tasks":"All Tasks"
       
 
 
