added author in report

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -166,7 +166,8 @@
       "Select Language":"Select Language",
       "All services":"All services",
       "Venue ID":"Venue ID",
-      "All Tasks":"All Tasks"
+      "All Tasks":"All Tasks",
+      "Author":"Author"
       
 
 
