--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -166,7 +166,8 @@
       "Select Language":"Zmiana języka",
       "All services":"Wszystkie usługi",
       "Venue ID":"ID miejsca",
-      "All Tasks":"Wszystkie zadania"
+      "All Tasks":"Wszystkie zadania",
+      "Author":"Autor"
     
  
 
