added dictionarys , add new dictionary name of tas

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -167,7 +167,9 @@
       "All services":"All services",
       "Venue ID":"Venue ID",
       "All Tasks":"All Tasks",
-      "Author":"Author"
+      "Author":"Author",
+      "Task names":"Task names",
+      "Dictionaries":"Dictionaries"
       
 
 
