--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -167,7 +167,10 @@
       "All services":"Wszystkie usługi",
       "Venue ID":"ID miejsca",
       "All Tasks":"Wszystkie zadania",
-      "Author":"Autor"
+      "Author":"Autor",
+      "Task names":"Nazwy tasków",
+      "Dictionaries":"Słowniki"
+      
     
  
 
