add filted data in clinet tasks

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -169,7 +169,9 @@
       "All Tasks":"All Tasks",
       "Author":"Author",
       "Task names":"Task names",
-      "Dictionaries":"Dictionaries"
+      "Dictionaries":"Dictionaries",
+      "New Task":"New Task",
+      "Contact":"Contact"
       
 
 
