--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -169,7 +169,9 @@
       "All Tasks":"Wszystkie zadania",
       "Author":"Autor",
       "Task names":"Nazwy tasków",
-      "Dictionaries":"Słowniki"
+      "Dictionaries":"Słowniki",
+      "New Task":"Nowe zadanie",
+      "Contact":"Kontakt"
       
     
  
