fixed label in userDetails

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -171,7 +171,9 @@
       "Task names":"Task names",
       "Dictionaries":"Dictionaries",
       "New Task":"New Task",
-      "Contact":"Contact"
+      "Contact":"Contact",
+      "Profile type":"Profile type",
+      "Phone number":"Phone number"
       
 
 
