--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -171,7 +171,9 @@
       "Task names":"Nazwy tasków",
       "Dictionaries":"Słowniki",
       "New Task":"Nowe zadanie",
-      "Contact":"Kontakt"
+      "Contact":"Kontakt",
+      "Profile type":"Typ profilu",
+      "Phone number":"Numer telefonu"
       
     
  
