added last report

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -173,7 +173,8 @@
       "New Task":"New Task",
       "Contact":"Contact",
       "Profile type":"Profile type",
-      "Phone number":"Phone number"
+      "Phone number":"Phone number",
+      "Open tasks":"Open tasks"
       
 
 
