--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -173,7 +173,8 @@
       "New Task":"Nowe zadanie",
       "Contact":"Kontakt",
       "Profile type":"Typ profilu",
-      "Phone number":"Numer telefonu"
+      "Phone number":"Numer telefonu",
+      "Open tasks":"Otwarte zadania"
       
     
  
