updated de language

--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -1,150 +1,178 @@
 {
-    "language": "Sprache",
-    "sign in": "Einloggen",
-    "sign up": "Registrieren",
-    "sign in via magic link": "Anmelden über den Magic Link",
-    "send magic link": "Magic Link senden",
-    "enter your email": "Geben Sie Ihre E-Mail-Adresse ein",
-    "enter your password": "Geben Sie Ihr Passwort ein",
-    "Successful registration": "Erfolgreiche Registrierung",
-    "Enter correct data": "Geben Sie die richtigen Daten ein",
-    "Logged successfully": "Erfolgreich eingeloggt",
-    "Enter a valid email address": "Geben Sie eine gültige E-Mail-Adresse ein",
-    "Login successfully completed, check your mailbox": "Anmeldung erfolgreich abgeschlossen, überprüfen Sie Ihr Postfach",
-    "Profile": "Profil",
-    "Administration": "Verwaltung",
-    "Venues": "Veranstaltungsorte",
-    "Schedule": "Zeitplan",
-    "Tasks": "Aufgaben",
-    "Reports": "Berichte",
-    "Home": "Startseite",
-    "Sign out": "Abmelden",
-    "Password change": "Passwort ändern",
-    "New password": "Neues Passwort",
-    "Submit": "Absenden",
-    "First and last name change": "Vor- und Nachnamen ändern",
-    "First and last name": "Vor- und Nachname",
-    "Updated!": "Aktualisiert!",
-    "The password must contain at least 6 characters": "Das Passwort muss mindestens 6 Zeichen enthalten",
-    "Users": "Benutzer",
-    "License": "Lizenz",
-    "Settings": "Einstellungen",
-    "Services": "Dienstleistungen",
-    "No services": "Keine Dienstleistungen",
-    "Name": "Name",
-    "Description": "Beschreibung",
-    "Cost": "Kosten",
-    "Unit": "Einheit",
-    "Add": "Hinzufügen",
-    "Delete": "Löschen",
-    "Action": "Aktion",
-    "No users": "Keine Benutzer",
-    "Type": "Typ",
-    "details": "Details",
-    "new": "Neu",
-    "An error occurred while registering the user:": "Es ist ein Fehler bei der Registrierung des Benutzers aufgetreten:",
-    "address": "Adresse",
-    "phone number": "Telefonnummer",
-    "profile type": "Profiltyp",
-    "Register": "Registrieren",
-    "description": "Beschreibung",
-    "password": "Passwort",
-    "User edit": "Benutzer bearbeiten",
-    "Landing...": "Laden...",
-    "An error occurred while downloading data.": "Beim Herunterladen der Daten ist ein Fehler aufgetreten.",
-    "Your license is valid until:": "Ihre Lizenz ist gültig bis:",
-    "Contractors": "Auftragnehmer",
-    "contact person": "Kontaktperson",
-    "National Economy Register ID": "Nationales Wirtschaftsregisternummer",
-    "Tax ID": "Steuernummer",
-    "Name or company name": "Name oder Firmenname",
-    "Blocked": "Gesperrt",
-    "Select Contractor": "Auftragnehmer auswählen",
-    "Copy the ID and deliver to your administrator to add you to the appropriate configuration": "Kopieren Sie die ID und geben Sie sie Ihrem Administrator, um Sie zur entsprechenden Konfiguration hinzuzufügen",
-    "Copy": "Kopieren",
-    "User ID": "Benutzer-ID",
-    "Hi, your ID can be found below": "Hallo, Ihre ID finden Sie unten",
-    "Contractor": "Auftragnehmer",
-    "Search by name": "Nach Name suchen",
-    "Search by number": "Nach Nummer suchen",
-    "Search by contractor": "Nach Auftragnehmer suchen",
-    "name": "Name",
-    "Add venue": "Veranstaltungsort hinzufügen",
-    "Update venue": "Veranstaltungsort aktualisieren",
-    "Open Tasks": "Offene Aufgaben",
-    "Closed Tasks": "Abgeschlossene Aufgaben",
-    "Basic data": "Grunddaten",
-    "Venue": "Veranstaltungsort",
-    "Working time": "Arbeitszeit",
-    "status": "Status",
-    "Open": "Offen",
-    "In progress": "In Bearbeitung",
-    "Completed": "Abgeschlossen",
-    "Select Asigned user": "Zugewiesenen Benutzer auswählen",
-    "Creation date": "Erstellungsdatum",
-    "Start of implementation": "Start der Umsetzung",
-    "Deadline": "Frist",
-    "Settled": "Abgerechnet",
-    "Task": "Aufgabe",
-    "Address": "Adresse",
-    "Select Venue": "Veranstaltungsort auswählen",
-    "Open in Google Maps": "In Google Maps öffnen",
-    "Estimated time": "Geschätzte Zeit",
-    "Status": "Status",
-    "Select service from dictionary": "Dienst aus dem Wörterbuch auswählen",
-    "Total": "Gesamt",
-    "Quantity": "Menge",
-    "Summary": "Zusammenfassung",
-    "No work time": "Keine Arbeitszeit",
-    "Date": "Datum",
-    "Time": "Zeit",
-    "Vacation": "Urlaub",
-    "Sick leave": "Krankheitsurlaub",
-    "Legend": "Legende",
-    "Task type": "Aufgabentyp",
-    "Status of the implementation of issues in the last 30 days": "Status der Umsetzung von Aufgaben in den letzten 30 Tagen",
-    "Open Filter": "Filter öffnen",
-    "Filter Venues": "Veranstaltungsorte filtern",
-    "Filter Tasks": "Aufgaben filtern",
-    "Apply Filters": "Filter anwenden",
-    "Your open and in progress tasks": "Ihre offenen und sich in Bearbeitung befindlichen Aufgaben",
-    "License expired": "Lizenz abgelaufen",
-    "Back to home page": "Zurück zur Startseite",
-    "Select User": "Benutzer auswählen",
-    "All users": "Alle Benutzer",
-    "Absences": "Abwesenheiten",
-    "Contractor edit": "Auftragnehmer bearbeiten",
-    "Closed": "Abgeschlossen",
-    "User": "Benutzer",
-    "Absence": "Abwesenheit",
-    "Start date": "Startdatum",
-    "End date": "Enddatum",
-    "Add new user": "Neuen Benutzer hinzufügen",
-    "Manager": "Manager",
-    "Client": "Kunde",
-    "Worker": "Arbeiter",
-    "Approved": "Genehmigt",
-    "Rejected": "Abgelehnt",
-    "About configuration": "Über die Konfiguration",
-    "Add absence": "Abwesenheit hinzufügen",
-    "Add task": "Aufgabe hinzufügen",
-    "Are you waiting? let's play a game": "Warten Sie? Lass uns ein Spiel spielen",
-    "game": {
+  "language": "Sprache",
+  "sign in": "Anmelden",
+  "sign up": "Registrieren",
+  "sign in via magic link": "Anmelden über den Magic-Link",
+  "send magic link": "Magic-Link senden",
+  "enter your email": "Geben Sie Ihre E-Mail-Adresse ein",
+  "enter your password": "Geben Sie Ihr Passwort ein",
+  "Successful registration": "Erfolgreiche Registrierung",
+  "Enter correct data": "Geben Sie die richtigen Daten ein",
+  "Logged successfully": "Erfolgreich angemeldet",
+  "Enter a valid email address": "Geben Sie eine gültige E-Mail-Adresse ein",
+  "Login successfully completed, check your mailbox": "Anmeldung erfolgreich abgeschlossen, überprüfen Sie Ihr Postfach",
+  "Profile": "Profil",
+  "Administration": "Verwaltung",
+  "Venues": "Veranstaltungsorte",
+  "Schedule": "Zeitplan",
+  "Tasks": "Aufgaben",
+  "Reports": "Berichte",
+  "Home": "Startseite",
+  "Sign out": "Abmelden",
+  "Password change": "Passwort ändern",
+  "New password": "Neues Passwort",
+  "Submit": "Absenden",
+  "First and last name change": "Vor- und Nachnamen ändern",
+  "First and last name": "Vorname und Nachname",
+  "Updated!": "Aktualisiert!",
+  "The password must contain at least 6 characters": "Das Passwort muss mindestens 6 Zeichen enthalten",
+  "Users": "Benutzer",
+  "License": "Lizenz",
+  "Settings": "Einstellungen",
+  "Services": "Dienste",
+  "No services": "Keine Dienste",
+  "Name": "Name",
+  "Description": "Beschreibung",
+  "Cost": "Kosten",
+  "Unit": "Einheit",
+  "Add": "Hinzufügen",
+  "Delete": "Löschen",
+  "Action": "Aktion",
+  "No users": "Keine Benutzer",
+  "Type": "Typ",
+  "details": "Details",
+  "new": "Neu",
+  "An error occurred while registering the user:": "Es ist ein Fehler bei der Benutzerregistrierung aufgetreten:",
+  "address": "Adresse",
+  "phone number": "Telefonnummer",
+  "profile type": "Profiltyp",
+  "Register": "Registrieren",
+  "description": "Beschreibung",
+  "password": "Passwort",
+  "User edit": "Benutzer bearbeiten",
+  "Landing...": "Ladevorgang...",
+  "An error occurred while downloading data.": "Beim Herunterladen der Daten ist ein Fehler aufgetreten.",
+  "Your license is valid until:": "Ihre Lizenz ist gültig bis:",
+  "Contractors": "Auftragnehmer",
+  "contact person": "Kontaktperson",
+  "National Economy Register ID": "Wirtschaftsregisternummer",
+  "Tax ID": "Steuernummer",
+  "Name or company name": "Name oder Firmenname",
+  "Blocked": "Gesperrt",
+  "Select Contractor": "Auftragnehmer auswählen",
+  "Copy the ID and deliver to your administrator to add you to the appropriate configuration": "Kopieren Sie die ID und übergeben Sie sie Ihrem Administrator, um Sie zur entsprechenden Konfiguration hinzuzufügen",
+  "Copy": "Kopieren",
+  "User ID": "Benutzer-ID",
+  "Hi, your ID can be found below": "Hallo, Ihre ID finden Sie unten",
+  "Contractor": "Auftragnehmer",
+  "Search by name": "Nach Name suchen",
+  "Search by number": "Nach Nummer suchen",
+  "Search by contractor": "Nach Auftragnehmer suchen",
+  "name": "Name",
+  "Add venue": "Veranstaltungsort hinzufügen",
+  "Update venue": "Veranstaltungsort aktualisieren",
+  "Open Tasks": "Offene Aufgaben",
+  "Closed Tasks": "Abgeschlossene Aufgaben",
+  "Basic data": "Grundlegende Daten",
+  "Venue": "Veranstaltungsort",
+  "Working time": "Arbeitszeit",
+  "status": "Status",
+  "Open": "Offen",
+  "In progress": "In Bearbeitung",
+  "Completed": "Abgeschlossen",
+  "Select Assigned user": "Zugewiesenen Benutzer auswählen",
+  "Creation date": "Erstellungsdatum",
+  "Start of implementation": "Start der Umsetzung",
+  "Deadline": "Frist",
+  "Settled": "Abgerechnet",
+  "Task": "Aufgabe",
+  "Address": "Adresse",
+  "Select Venue": "Veranstaltungsort auswählen",
+  "Open in Google Maps": "In Google Maps öffnen",
+  "Estimated time": "Geschätzte Zeit",
+  "Status": "Status",
+  "Select service from dictionary": "Dienst aus dem Wörterbuch auswählen",
+  "Total": "Gesamt",
+  "Quantity": "Menge",
+  "Summary": "Zusammenfassung",
+  "No work time": "Keine Arbeitszeit",
+  "Date": "Datum",
+  "Time": "Uhrzeit",
+  "Vacation": "Urlaub",
+  "Sick leave": "Krankmeldung",
+  "Legend": "Legende",
+  "Task type": "Aufgabenart",
+  "Status of the implementation of issues in the last 30 days": "Status der Umsetzung von Aufgaben in den letzten 30 Tagen",
+  "Open Filter": "Filter öffnen",
+  "Filter Venues": "Veranstaltungsorte filtern",
+  "Filter Tasks": "Aufgaben filtern",
+  "Apply Filters": "Filter anwenden",
+  "Your open and in progress tasks": "Ihre offenen und in Bearbeitung befindlichen Aufgaben",
+  "License expired": "Lizenz abgelaufen",
+  "Back to home page": "Zurück zur Startseite",
+  "Select User": "Benutzer auswählen",
+  "All users": "Alle Benutzer",
+  "Absences": "Abwesenheiten",
+  "Contractor edit": "Auftragnehmer bearbeiten",
+  "Closed": "Abgeschlossen",
+  "User": "Benutzer",
+  "Absence": "Abwesenheit",
+  "Start date": "Startdatum",
+  "End date": "Enddatum",
+  "Add new user": "Neuen Benutzer hinzufügen",
+  "Manager": "Manager",
+  "Client": "Kunde",
+  "Worker": "Mitarbeiter",
+  "Approved": "Genehmigt",
+  "Rejected": "Abgelehnt",
+  "About configuration": "Über die Konfiguration",
+  "Add absence": "Abwesenheit hinzufügen",
+  "Add task": "Aufgabe hinzufügen",
+  "Are you waiting? let's play a game": "Warten Sie? Lass uns ein Spiel spielen",
+  "game": {
       "rock": "Stein",
       "paper": "Papier",
       "scissors": "Schere",
-      "playerChoice": "Deine Wahl: {{choice}}",
+      "playerChoice": "Ihre Wahl: {{choice}}",
       "computerChoice": "Computerwahl: {{choice}}",
       "tie": "Unentschieden!",
-      "playerWins": "Du hast gewonnen!",
+      "playerWins": "Sie haben gewonnen!",
       "computerWins": "Der Computer hat gewonnen."
-    },
-    "Incorrect dates": "Falsche Daten",
-    "Date from : ": "Datum von: ",
-    "Date to : ": "Datum bis: ",
-    "Report realization of issues for the customers [only completed]": "Bericht über die Umsetzung von Aufgaben für Kunden [nur abgeschlossen]",
-    "Amount of tasks": "Anzahl der Aufgaben",
-    "Language": "Sprache",
-    "Search by User": "Nach Benutzer suchen"
-  }
-  
+  },
+  "Incorrect dates": "Falsche Daten",
+  "Date from : ": "Datum von: ",
+  "Date to : ": "Datum bis: ",
+  "Report realization of issues for the customers [only completed]": "Bericht über die Umsetzung von Aufgaben für Kunden [nur abgeschlossen]",
+  "Amount of tasks": "Anzahl der Aufgaben",
+  "Language": "Sprache",
+  "Search by User": "Nach Benutzer suchen",
+  "History": "Verlauf",
+  "Venues details": "Veranstaltungsortdetails",
+  "End Date": "Enddatum",
+  "Start Date": "Startdatum",
+  "Active": "Aktiv",
+  "Archived": "Archiviert",
+  "Yes": "Ja",
+  "No": "Nein",
+  "Cancelled": "Abgesagt",
+  "Map": "Karte",
+  "Tasks history": "Aufgabenverlauf",
+  "Details": "Details",
+  "Cancel": "Abbrechen",
+  "Change Status": "Status ändern",
+  "Changing the status of the task to complete will not allow you to edit it later.": "Wenn Sie den Status der Aufgabe auf abgeschlossen ändern, können Sie ihn später nicht mehr bearbeiten.",
+  "Do you want to copy this venue?": "Möchten Sie diesen Veranstaltungsort kopieren?",
+  "Do you want to copy this task?": "Möchten Sie diese Aufgabe kopieren?",
+  "Select Language": "Sprache auswählen",
+  "All services": "Alle Dienste",
+  "Venue ID": "Veranstaltungsort-ID",
+  "All Tasks": "Alle Aufgaben",
+  "Author": "Autor",
+  "Task names": "Aufgabenbezeichnungen",
+  "Dictionaries": "Wörterbücher",
+  "New Task": "Neue Aufgabe",
+  "Contact": "Kontakt",
+  "Profile type": "Profiltyp",
+  "Phone number": "Telefonnummer",
+  "Open tasks": "Offene Aufgaben"
+}
