--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -168,7 +168,7 @@
       "Venue ID":"ID miejsca",
       "All Tasks":"Wszystkie zadania",
       "Author":"Autor",
-      "Task names":"Nazwy tasków",
+      "Task names":"Nazwy zadań",
       "Dictionaries":"Słowniki",
       "New Task":"Nowe zadanie",
       "Contact":"Kontakt",
