--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -174,7 +174,8 @@
       "Contact":"Contact",
       "Profile type":"Profile type",
       "Phone number":"Phone number",
-      "Open tasks":"Open tasks"
+      "Open tasks":"Open tasks",
+      "Have questions or suggestions about our software? Contact the Task Venue team in any convenient way.":"Have questions or suggestions about our software? Contact the Task Venue team in any convenient way."
       
 
 
