--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -174,7 +174,8 @@
       "Contact":"Kontakt",
       "Profile type":"Typ profilu",
       "Phone number":"Numer telefonu",
-      "Open tasks":"Otwarte zadania"
+      "Open tasks":"Otwarte zadania",
+      "Have questions or suggestions about our software? Contact the Task Venue team in any convenient way.":"Masz pytania lub sugestie dotyczące  naszego oprogramowania? Skontaktuj się z zespołem Task Venue w dowolny dogodny sposób."
       
     
  
