added some of translations

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -190,7 +190,21 @@
       "App":"Aplikacja",
       "Knowledge":"Knowledge",
       "Technology":"Technology",
-      "I can't remember my password":"I can't remember my password"
+      "I can't remember my password":"I can't remember my password",
+      "A place for your business":"A place for your business",
+      "We have worked hard to incorporate the best combination of business elements into applications for service businesses, and to make working with complex software tools as simple as possible. We are always looking for innovative and efficient approaches so that the system is as useful as possible.":"We have worked hard to incorporate the best combination of business elements into applications for service businesses, and to make working with complex software tools as simple as possible. We are always looking for innovative and efficient approaches so that the system is as useful as possible.",
+      "Learn more":"Learn more",
+      "Task Venue simplicity and efficiency in every detail":"Task Venue simplicity and efficiency in every detail",
+      "The use of the Task Venue system has a positive impact on building customer relationships, which in turn increases the dynamics of the final profit.":"The use of the Task Venue system has a positive impact on building customer relationships, which in turn increases the dynamics of the final profit.",
+      "Results after implementing Task Venue software:":"Results after implementing Task Venue software:",
+      "Inspection":"Inspection",
+      "Customer loyalty":"Customer loyalty",
+      "Income growth":"Income growth",
+      "Optimization":"Optimization",
+      "Electronic reporting simplifies control of all business processes":"Electronic reporting simplifies control of all business processes",
+      "Improved service extends customer life cycle":"Improved service extends customer life cycle",
+      "Operating costs decrease, increasing income":"Operating costs decrease, increasing income",
+      "Detailed analysis of the company's profit and the profitability of each place served":"Detailed analysis of the company's profit and the profitability of each place served"
     
   
 
