--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -190,7 +190,21 @@
       "App":"Aplikacja",
       "Knowledge":"Wiedza",
       "Technology":"Technologia",
-      "I can't remember my password":"Nie pamiętam hasła"
+      "I can't remember my password":"Nie pamiętam hasła",
+      "A place for your business":"Miejsce dla Twojego biznesu",
+      "We have worked hard to incorporate the best combination of business elements into applications for service businesses, and to make working with complex software tools as simple as possible. We are always looking for innovative and efficient approaches so that the system is as useful as possible.":"Ciężko pracowaliśmy, aby włączyć najlepszą kombinację elementów biznesowych do aplikacji dla biznesów usługowych, a także aby maksymalnie uprościć pracę ze złożonymi narzędziami programowymi. Zawsze szukamy innowacyjnych i wydajnych podejść tak aby system był jak najbardziej użyteczny.",
+      "Learn more":"Dowiedz się więcej",
+      "Task Venue simplicity and efficiency in every detail":"Task Venue prostota i wydajność w każdym szczególe",
+      "The use of the Task Venue system has a positive impact on building customer relationships, which in turn increases the dynamics of the final profit.":"Wykorzystanie systemu Task Venue wpływa pozytywnie wpływa na budowanie relacji z klientami, co z kolei zwiększa dynamikę końcowego zysku.",
+      "Results after implementing Task Venue software:":"Wyniki po wdrożeniu oprogramowania Task Venue:",
+      "Inspection":"Kontrola",
+      "Customer loyalty":"Lojalność klientów",
+      "Income growth":"Wzrost dochodów",
+      "Optimization":"Optymalizacja",
+      "Electronic reporting simplifies control of all business processes":"Elektroniczne raportowanie upraszcza kontrolę wszystkich procesów biznesowych",
+      "Improved service extends customer life cycle":"Udoskonalony serwis wydłuża cykl życia klienta",
+      "Operating costs decrease, increasing income":"Zmniejszają się koszty operacyjne, zwiększając dochód",
+      "Detailed analysis of the company's profit and the profitability of each place served":"Szczegółowa analiza zysku firmy i rentowności każdego obsłuonego miejsca"
       
     
  
