added translations in auth

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -204,7 +204,9 @@
       "Electronic reporting simplifies control of all business processes":"Elektroniczne raportowanie upraszcza kontrolę wszystkich procesów biznesowych",
       "Improved service extends customer life cycle":"Udoskonalony serwis wydłuża cykl życia klienta",
       "Operating costs decrease, increasing income":"Zmniejszają się koszty operacyjne, zwiększając dochód",
-      "Detailed analysis of the company's profit and the profitability of each place served":"Szczegółowa analiza zysku firmy i rentowności każdego obsłuonego miejsca"
+      "Detailed analysis of the company's profit and the profitability of each place served":"Szczegółowa analiza zysku firmy i rentowności każdego obsłuonego miejsca",
+      "Don’t have an account?":"Nie masz konta?",
+      "Get started":"Rozpocznij"
       
     
  
