--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -204,7 +204,9 @@
       "Electronic reporting simplifies control of all business processes":"Electronic reporting simplifies control of all business processes",
       "Improved service extends customer life cycle":"Improved service extends customer life cycle",
       "Operating costs decrease, increasing income":"Operating costs decrease, increasing income",
-      "Detailed analysis of the company's profit and the profitability of each place served":"Detailed analysis of the company's profit and the profitability of each place served"
+      "Detailed analysis of the company's profit and the profitability of each place served":"Detailed analysis of the company's profit and the profitability of each place served",
+      "Don’t have an account?":"Don’t have an account?",
+      "Get started":"Get started"
     
   
 
