--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -211,7 +211,9 @@
       "Our mission":"Our mission",
       "In creating and developing Task Venue, we want to listen to the needs of our customers in the marketplace. We want to provide exactly the tools you need for effective business management. In addition, we strive to make using Task Venue as simple and straightforward as possible.":"In creating and developing Task Venue, we want to listen to the needs of our customers in the marketplace. We want to provide exactly the tools you need for effective business management. In addition, we strive to make using Task Venue as simple and straightforward as possible.",
       "The mission is to deliver maximum value to our customers by designing, developing and implementing relevant and effective functionality that will benefit the service business. In addition, all of this is accessible and possible even on your smartphone! Pocket system allows you to easily log in to your account using your smartphone wherever you are: at any time you can monitor all the work of your team of employees, review orders and analysis without interrupting other important matters.":"The mission is to deliver maximum value to our customers by designing, developing and implementing relevant and effective functionality that will benefit the service business. In addition, all of this is accessible and possible even on your smartphone! Pocket system allows you to easily log in to your account using your smartphone wherever you are: at any time you can monitor all the work of your team of employees, review orders and analysis without interrupting other important matters.",
-      "Employee time report":"Employee time report"
+      "Employee time report":"Employee time report",
+      "Based in Cracow":"Based in Cracow",
+      "Poland":"Poland"
     
   
 
