added add document module in contractors

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -213,7 +213,16 @@
       "The mission is to deliver maximum value to our customers by designing, developing and implementing relevant and effective functionality that will benefit the service business. In addition, all of this is accessible and possible even on your smartphone! Pocket system allows you to easily log in to your account using your smartphone wherever you are: at any time you can monitor all the work of your team of employees, review orders and analysis without interrupting other important matters.":"The mission is to deliver maximum value to our customers by designing, developing and implementing relevant and effective functionality that will benefit the service business. In addition, all of this is accessible and possible even on your smartphone! Pocket system allows you to easily log in to your account using your smartphone wherever you are: at any time you can monitor all the work of your team of employees, review orders and analysis without interrupting other important matters.",
       "Employee time report":"Employee time report",
       "Based in Cracow":"Based in Cracow",
-      "Poland":"Poland"
+      "Poland":"Poland",
+      "Send":"Send",
+      "Display":"Display",
+      "Invoices":"Invoices",
+      "Documents":"Documents",
+      "Contracts":"Contracts",
+      "Others":"Others",
+      "File Name":"File Name",
+      "Actions":"Actions"
+    
     
   
 
