added attachment in venues

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -221,7 +221,8 @@
       "Contracts":"Contracts",
       "Others":"Others",
       "File Name":"File Name",
-      "Actions":"Actions"
+      "Actions":"Actions",
+      "Attachments":"Attachments"
     
     
   
