--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -221,7 +221,8 @@
       "Contracts":"Umowy",
       "Others":"Inne",
       "File Name":"Nazwa pliku",
-      "Actions":"Akcje"
+      "Actions":"Akcje",
+      "Attachments":"Załączniki"
     
  
 
