--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -222,7 +222,9 @@
       "Others":"Others",
       "File Name":"File Name",
       "Actions":"Actions",
-      "Attachments":"Attachments"
+      "Attachments":"Attachments",
+      "Delete File":"Delete File",
+      "Are you sure you want to delete this file?":"Are you sure you want to delete this file?"
     
     
   
