--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -238,7 +238,9 @@
       "Today": "Today",
       "Agenda": "Agenda",
       "There are no events in this range.": "There are no events in this range.",
-      "More":"More"
+      "More":"More",
+      "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.":"That is, a system that improves management and communication between management, the customer, and those doing the work in the field.",
+      "Order a consultation":"Order a consultation"
     
     
   
