added some fixes regaeding view in mobile

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -240,7 +240,7 @@
       "There are no events in this range.": "Brak wydarzeń w tym zakresie.",
       "More": "Więcej",
       "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.":"Czyli system usprawniający zarządzanie oraz komunikację między kierownictwem, klientem, a osobami wykonującymi pracę w terenie.",
-      "Order a consultation":"Zamów a konsultacje"
+      "Order a consultation":"Zamów bezpłatną konsultację"
 
 
 
